--- a/KHHealthCareProj/GoogleService-Info.plist
+++ b/KHHealthCareProj/GoogleService-Info.plist
@@ -23,7 +23,7 @@
 	<key>STORAGE_BUCKET</key>
 	<string>project-8782036471837740131.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
 	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
@@ -31,7 +31,7 @@
 	<key>IS_GCM_ENABLED</key>
 	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<false/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:416424221689:ios:2d1834dc702c9ea5</string>
 	<key>DATABASE_URL</key>
